tests/snapshots/tui_snapshots__snapshot_status_filter_active.snap
---
source: tests/tui_snapshots.rs
assertion_line: 187
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 1/2   🗂  Module Overview (1/2)   [?] help

┌ 📚  Exercises ────────────────────┐┌ Module Summary ──────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  Movement (1/2)              ││                                                                                  │
│                                  ││  🗂  Movement                                                                     │
│    ✅  Move 1                     ││                                                                                  │
│       Move 2                     ││  ████████████░░░░░░░░░░░░  1/2                                                   │
│                                  ││                                                                                  │
│ ▼ 🗂  Selection (1/2)             ││  📝  EXERCISES                                                                    │
│                                  ││                                                                                  │
│       Select 1                   ││     ✅  Move 1   ⭐                                                                │
│    ✅  Select 2                   ││     🟡  Move 2   ⭐ ⭐                                                              │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││  ⌨️   COMMANDS LEARNED (2)                                                        │
│                                  ││                                                                                  │
│                                  ││     h         left                                                               │
│                                  ││     l         right                                                              │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││  Press j/Tab on an exercise to focus it · Tab on this header to collapse         │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││  ── end ──                                                                       │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘

  🏆  ██████████░░░░░░░░░░ 2/4 (50%)      ✅ Passed (2 matches) [Esc] clear  💡 [/] search  [F] filter  🔄 [r] reset  ⏭️  [n]
